--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "history": "^4.6.3",
+    "less": "^2.7.2",
     "mime": "^1.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
