--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "history": "^4.6.3",
     "less": "^2.7.2",
     "mime": "^1.3.4",
+    "quill": "^1.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-quill": "^1.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
