--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^0.11.1",
     "history": "^4.6.3",
     "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "mime": "^1.3.4",
     "quill": "^1.3.2",
     "react": "^15.5.4",
