--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-promise": "^0.5.3",
